fixed the responsive issue on mobile

--- a/app/assets/stylesheets/custom_style.scss
+++ b/app/assets/stylesheets/custom_style.scss
@@ -1,3 +1,21 @@
 form#s3-uploader{
   padding-bottom: 0;
 }
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  #OnboardingTopBar-react-component-0{
+    display:none;
+  }
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+  #OnboardingTopBar-react-component-0{
+    display:none;
+  }
+}
